More spacing issues fixed, small text adjustments, cv updated

--- a/style.css
+++ b/style.css
@@ -318,6 +318,7 @@ section{
 /* EXPERIENCE SECTION */
 
 #experience {
+    margin-top: 25rem;
     position: relative;
 }
 
